# perseval

./: .gitignore  .impeccable.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KNOWN_LIMITATIONS.md  LEARNED_TASK_COMPLETION.md  README.md  RELEASING.md  SECURITY.md  perseval.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  dependency-audit.yml  development-build.yml  docs.yml  release.yml  security.yml
apps/perseval-app/: Cargo.toml
apps/perseval-app/macos/: Info.plist  Perseval.icns
apps/perseval-app/src/: blocking.rs  icons.rs  lib.rs  main.rs
apps/perseval-app/src/app/: bootstrap.rs  mod.rs  runtime_mode.rs  window.rs
apps/perseval-app/src/components/: button.rs  data_page.rs  editor_empty_state.rs  mod.rs  tag.rs  telemetry_gaps.rs  text_input.rs
apps/perseval-app/src/controllers/: bounded_cache.rs  mod.rs  query.rs  subscription.rs
apps/perseval-app/src/design/: mod.rs  tokens.rs
apps/perseval-app/src/screens/: mod.rs
apps/perseval-app/src/screens/compare/: mod.rs
apps/perseval-app/src/screens/evals/: calibration.rs  human_review.rs  mod.rs  studio.rs
apps/perseval-app/src/screens/failure_inbox/: comparison.rs  components.rs  eval_batch_preview.rs  eval_generation.rs  evidence.rs  filter_menu.rs  full_trace_render.rs  full_trace_timeline.rs  full_trace_tree.rs  group_header.rs  investigation_state.rs  mod.rs  preferences.rs  recovery.rs  render.rs  render_root.rs  scope.rs  selection.rs  state.rs
apps/perseval-app/src/screens/runs/: compact_row.rs  filters.rs  mod.rs  tests.rs
apps/perseval-app/src/screens/settings/: components.rs  mod.rs
apps/perseval-app/src/screens/sources/: mod.rs
apps/perseval-app/src/screens/trace_fixture/: components.rs  mod.rs
apps/perseval-app/src/screens/welcome/: mod.rs
apps/perseval-app/src/screens/workbench_shell/: chrome.rs  command_palette.rs  editor_labels.rs  mod.rs  navigation.rs  panes.rs
apps/perseval-app/src/workbench/: actions.rs  commands.rs  editor_registry.rs  mod.rs  model.rs  navigation.rs  persistence.rs  state.rs
crates/perseval-ingest/: Cargo.toml
crates/perseval-ingest/src/: lib.rs  otlp.rs
crates/perseval-mcp/: Cargo.toml
crates/perseval-mcp/src/: cursor.rs  descriptors.rs  input.rs  ipc.rs  lib.rs  main.rs  projection.rs  server.rs
crates/perseval-mcp/tests/: stdio_protocol.rs
crates/perseval-model-runtime/: Cargo.toml
crates/perseval-model-runtime/src/: lib.rs
crates/perseval-service/: Cargo.toml
crates/perseval-service/src/: analysis.rs  assessments.rs  commands.rs  config.rs  demo_trace.rs  jobs.rs  lib.rs  live.rs  model_management.rs  queries.rs  runtime.rs  supervision.rs  topology.rs
crates/perseval-service/src/analysis/: tests.rs
crates/perseval-service/src/live/: assessments.rs  local_import.rs  product.rs  reviews.rs  writer.rs
crates/perseval-service/tests/: assessment_runtime.rs  live_otlp.rs
crates/perseval-store/: Cargo.toml
crates/perseval-store/src/: analytics.rs  blobs.rs  control.rs  layout.rs  lib.rs  model.rs  workspace.rs
crates/perseval-store/src/model/: tests.rs
crates/perseval-store/src/workspace/: analysis.rs  assessments.rs  comparison.rs  context.rs  diagnostics.rs  ingest.rs  persisted_json.rs  projection.rs  projects.rs  read.rs  repositories.rs  reviews.rs  schema.rs  span_tree.rs  taxonomy.rs  topology.rs
crates/perseval-store/src/workspace/analysis/: evals.rs  inbox.rs  runtime.rs
crates/perseval-store/src/workspace/analysis/inbox/: dispositions.rs  investigation.rs  queries.rs
crates/perseval-store/src/workspace/analysis/runtime/: cohorts.rs
crates/perseval-store/tests/: failure_inbox.rs  run_ordering.rs  safe_analysis_roundtrip.rs  semantic_cohort_scope.rs
crates/perseval-store/tests/failure_inbox/: analysis_projection.rs  product_workflows.rs
scripts/: check-release-readiness.sh  package-macos-app.sh  perseval-mcp-smoke.py  verify-gate-f-screenshots.sh
tools/perseval-bench/: Cargo.toml
tools/perseval-bench/src/: assessment_score.rs  default_detector_fixture.rs  default_detector_score.rs  detector_score.rs  fetch.rs  fixture.rs  guard.rs  isolation.rs  local_chat.rs  main.rs  manifest.rs  profile.rs  qualify.rs  reanalyze.rs  replay.rs  score.rs  task_completion.rs  task_completion_calibrator.rs  task_completion_compact.rs  task_completion_features.rs  task_completion_models.rs
