[workspace]
members = [
    "apps/perseval-app",
    "crates/perseval-ingest",
    "crates/perseval-mcp",
    "crates/perseval-service",
    "crates/perseval-store",
    "tools/perseval-bench",
]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.94.0"
repository = "https://github.com/Etolith/perseval"
license = "GPL-3.0-or-later"

[workspace.dependencies]
async-channel = "2.5"
axum = "0.8"
base64 = "0.22"
directories = "6"
duckdb = { version = "~1.10504.0", features = ["bundled"] }
flate2 = "1"
gpui = { git = "https://github.com/gpui-ce/gpui-ce", rev = "20340e14874a3b55122e5cb2aa0d023874e08b2d", package = "gpui", default-features = false, features = ["font-kit"] }
gpui_platform = { git = "https://github.com/gpui-ce/gpui-ce", rev = "20340e14874a3b55122e5cb2aa0d023874e08b2d", package = "gpui_platform", features = ["font-kit"] }
hex = "0.4"
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic-messages", "trace", "with-serde"] }
perseval-ingest = { path = "crates/perseval-ingest" }
perseval-service = { path = "crates/perseval-service" }
perseval-store = { path = "crates/perseval-store" }
prost = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rmcp = { version = "2.2", default-features = false, features = ["server", "macros", "transport-async-rw", "transport-io"] }
rusqlite = { version = "0.37", features = ["bundled"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tempfile = "3"
tokio = { version = "1", features = ["io-std", "macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "1.1"
tower = "0.5"
traces-to-evals = { git = "https://github.com/Etolith/traces-to-evals", rev = "dbeaa5eea36ff4a61c7f9e0ad052dbecc6791603", features = ["clustering-linfa", "embeddings-openai", "cluster-label-openai", "llm-judge-openai"] }
unicode-segmentation = "1.12"
zstd = "0.13"
