[package]
name = "perseval-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Native macOS failure-investigation workbench for agent traces"
publish = false

[lib]
name = "perseval_app"
path = "src/lib.rs"

[[bin]]
name = "perseval"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
gpui.workspace = true
gpui_platform.workspace = true
perseval-mcp = { path = "../../crates/perseval-mcp" }
perseval-service.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
