[package]
name = "perseval-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Read-only MCP server for committed Perseval workspaces"
publish = false

[dependencies]
base64.workspace = true
hex.workspace = true
perseval-service.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
