[package]
name = "perseval-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Durable SQLite, DuckDB, and content-addressed storage for Perseval"
publish = false

[dependencies]
chrono = "0.4"
duckdb.workspace = true
hex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
traces-to-evals.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
