[package]
name = "perseval-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Reproducible scale and detector qualification tooling for Perseval"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
duckdb.workspace = true
flate2.workspace = true
hex.workspace = true
opentelemetry-proto.workspace = true
ort.workspace = true
perseval-service.workspace = true
perseval-store.workspace = true
prost.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokenizers.workspace = true
traces-to-evals.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
